testing:

1.3.2:
	- merged changes up to 1.2.36pre1

1.3.1:
	- merged changes up to 1.2.32
	- handle all NET_WM_ICON app properties (Thomas Holder)
	- display memory/swap/temperature/frequency information in the
          CPU applet (Eugeny Vdovin)
	- warp the mouse pointer on mouse triggered workspace 
          switch (Owen Marshall)
	- show window preview for workspaces in taskbar (Thomas Holder)

1.3.0:
	- merged changes up to 1.2.30
	- NET_WM_ICON support
	- gdk_pixbuf_xlib now used as image library

stable:

1.2.36pre1:
	- fix unresponsive taskbar when PassFirstClickToClient=0
	- add support for sysfs interface (instead of proc) for battery 
          status (initial code by Santiago Garcia Mantinan)
	- fix maximized window repositioning on fullscreen toggle
	- bug 1852567 - make searching for icons more consistent (iconPath first, 
          search each directory first for all possible types - xpm, png)
	- Italian translation update
	- Korean translation update
	- translation cleanup: converted .po files to UTF-8

1.2.35: 2008-01-05
	- Application tray bug fixes
        - Add encoding/language to about dialog

1.2.34: 2007-12-27
	- fix gmplayer switching to fullscreen
	- popup dialog focus fixes
	- fix screen change with xrandr 1.2

1.2.33: 2007-11-04
	- build fixes (Bert Wesarg)
	- fix FocusOnRaise
	- tray fixes
	- fix taskbar popup in fullscreen mode

1.2.32: 2007-08-07
	- fix session shutdown when logging out (Stanislav Maslovski)
	- tweaks to taskbar auto-hide in fullscreen mode

1.2.31: 2007-07-27
	- auto-hide like taskbar activation in full screen mode
	- fix raise/lower of windows of java6 apps
	- fix iconic app startup

1.2.31pre1: 2007-05-20
	- fix crash when using battery status applet without ACPI (flitsch)
	- fix CPU status applet with long uptime
	- zh_CN translation update (LI Daobing)
	- zh_TW translation update (Wei-Lun Chao)
	- added missing ShowSettingsMenu and ShowFocusModeMenu 
          settings (Evgenii Terechkov)