@@ -2,6 +2,7 @@ testing:
 
 1.3.2:
 	- merged changes up to 1.2.36pre1
+	- add FocusRequestFlashInterval (0 = disable)
 
 1.3.1:
 	- merged changes up to 1.2.32
